--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,11 +6,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Barlow:ital@1&family=DM+Sans:opsz@9..40&family=Manrope&family=Space+Grotesk&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Barlow:ital@1&family=DM+Sans:opsz,wght@9..40,400;9..40,800&family=Manrope&family=Space+Grotesk&display=swap"
       rel="stylesheet"
     />
 
-    <link href="./src/index.css" rel="stylesheet">
+    <link href="./src/index.css" rel="stylesheet" />
 
     <title>TravelBugs</title>
   </head>
