--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
 
     <title>TravelBugs</title>
   </head>
-  <body>
+  <body class="select-none">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
